# Image-Tools

./: .gitignore  BASELINE.md  CLAUDE.md  INTEGRATION_SUMMARY.md  PRESET_USAGE.md  README.md  TEST_SUMMARY.md  example_preset_usage.py  main.py  pyproject.toml  run_tests.sh  test_backend_registry.py  test_cuda.py  test_presets.py  test_splitter.py  test_with_synthetic_images.py
.rewrite/: backup.bundle  commit_callback.py  commit_messages.jsonl  commits.before.txt  commits.txt  filter-repo.out.txt  fsck.after.txt  generate_commit_messages.py  head.after.txt  head.before.txt  origin.url.before.txt  refs.after.txt  refs.before.txt  remotes.after.txt
.rewrite/commit_analysis/: 01-46b9c10.txt  02-aedd3f5.txt  03-91d5040.txt  04-daebad9.txt  05-19e20a8.txt  06-a786050.txt  07-4ac1c3b.txt  08-0368aa8.txt  09-4d6217e.txt  10-eeb7fee.txt  11-f88316f.txt  12-0aa4c38.txt  13-5d2fae0.txt  14-d192754.txt  15-5c59101.txt  16-e4c761c.txt  17-f79fa51.txt  18-000ea43.txt  19-d98ce4e.txt  20-a84e5fd.txt  21-9e88396.txt  22-a3ab388.txt  23-77b5d80.txt  24-8cfa382.txt  25-55e3adf.txt  26-d6721f0.txt  27-4fdb232.txt  28-e37bff8.txt  29-d7e5da8.txt  30-95d405f.txt  31-fbe7224.txt  32-9b5a841.txt  33-9f17535.txt  34-c2fffe5.txt  35-8a6a46b.txt  36-2f7661b.txt  37-9da25b0.txt  38-179bdca.txt
docs/: BACKGROUND_REMOVAL_PIPELINE.md  ESC_KEY_FIX.md  IMAGE_SPLITTER.md  MIGRATION_GUIDE.md  NEW_UI_GUIDE.md  README.ja.md  README.zh-CN.md  README.zh-TW.md  TESTING.md  ULTRA_BACKEND.md  UNIFIED_BACKEND.md
scripts/: batch_test_params.py  validate.sh
src/: app.py
src/backends/: __init__.py  batch_compare.py  gemini_watermark.py  image_splitter.py  registry.py  transparent_bg.py  ultra.py  unified.py
src/common/: __init__.py  alpha_config.py  color_filter.py  model_compat.py  preset_config.py
src/core/: __init__.py  models.py  processor.py  progress.py
src/data_model/: __init__.py  core.py
src/features/: __init__.py
src/features/background_removal/: __init__.py  color_filter.py  defringing.py  portrait_matting.py  trimap.py  ultra.py  unified.py
src/features/batch_compare/: __init__.py  engine.py  report.py
src/features/batch_compare/templates/: __init__.py  css.py  html.py  js.py
src/features/image_splitting/: __init__.py  detector.py  image_splitter.py  optimizer.py  splitter.py
src/features/watermark_removal/: __init__.py  gemini_watermark.py
src/settings/: __init__.py  app.py
src/ui/: __init__.py  history.py  modern.py  ultra_config.py
src/utils/: __init__.py  geometry.py  splitter.py  union_find.py
tests/: CLAUDE.md  conftest.py  test_alpha_config.py  test_core.py  test_e2e.py  test_models.py  test_portrait_matting.py  test_preset_e2e.py  test_preset_system.py  test_processor.py  test_processor_e2e.py  test_progress.py  test_sprite_generator.py  test_ultra_backend.py  test_ultra_backend_enhancements.py  test_unified_backend.py
tests/fixtures/synthetic/: generate_test_images.py
